--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@sanity/client": "^2.1.0",
     "next": "10.0.4",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "sass": "^1.32.0"
   }
 }
